# FomdLiveChangeVoice

./: README.md
app/: build.gradle
app/src/androidTest/java/com/rainy/livechangevoice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 小幸运.aac
app/src/main/cpp/: CMakeLists.txt  changeVoice.cpp  com_rainy_livechangevoice_VoiceUtil.h
app/src/main/java/com/rainy/livechangevoice/: MainActivity.java  VoiceUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/rainy/livechangevoice/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
